added file AddErrorInAppActivity added file AddQuestionActivity added file SearchQuestionActivity added file Question added file Error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">She Asks</string>
+    <string name="please_enter_question_text">Please enter question text</string>
 </resources>
