--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">She Asks</string>
     <string name="please_enter_question_text">Please enter question text</string>
+    <string name="question">שאלה</string>
+    <string name="menu">menu</string>
 </resources>
